--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: configure
-      run: sudo apt install libsfml-dev
+      run: |
+        sudo apt-get update
+        sudo apt-get install libsfml-dev -y
+        sudo apt autoremove
     - name: Compile
       run: g++ View.cpp -o View -lsfml-system -lsfml-window -lsfml-graphics -lpthread
